@@ -1,3 +1,4 @@
 DIST armadillo-4.650.4.tar.gz 5408567 SHA256 ccc56580ec932ec9beade5679b07ecbed889e9b602866f673d1a05a7692b4bf8 SHA512 a548150ba5484fce35b0bc6023982939946f2f00b733dff2cd5b46101b1c344342061389cb4363cdaa04c5e3cca3278a40febe2ed705316552dd71f841c46037 WHIRLPOOL 331493d8b9c92b9e1908880c6f6510edb12e93193a9ceb77d0b8ce9d0bfb493dc48e590ea949d39c3c19f6fc3b05446b7e00525512e3055be0f907427c28f7d4
 DIST armadillo-5.000.1.tar.gz 5425382 SHA256 8ca55fbfce220517374a879ddc0c79e1afd3993f89cc58621aa502e9533f3cdb SHA512 a1c109313734c1d1c8a5caf7c12f088c5acaaafd0738812b0692ee8353653d25d798dce2b8ec8706fa5cd546f3247155b94b416ad780b5d847d8a5d6ad4399ff WHIRLPOOL 6eeabb373d5fae740ba3debc0cbf63aa7e8fc6cb77e94ce77e0a05741ebe6da3192b18c43d93a19ad46ffa5e2cbc07922f1a8a4ca5eb2cac8cf9159fbf952da7
 DIST armadillo-5.100.1.tar.gz 5428805 SHA256 cf4c3c700e163689b187dd987756d963e24ca5f0834b6dad59832300d55860c7 SHA512 16fffab262d89d9f625e4405dadc20f3117e1682d5bf67810eccab2c08ff0690bdf89e11b87948dafc25547078eeab1745e73e33c4f50223fb632643f692a9b6 WHIRLPOOL 371168e591bb1fa6bd4a506d3f0aaa3c0ff01d6d92815c2210e6e3cb8f73a351e5e5e5ad9128e0ea96f9cc02d04b30a0a03e2c156210a6c19d2093ed565156ba
+DIST armadillo-5.100.2.tar.gz 5429961 SHA256 63150f12bf7c7c598ea55b7271d99fce349ff386a3dc2cae3904b244f6e35320 SHA512 2777b525bc62daddfb16eae7b74c29b6b695a7985c56d9dca727ae1e13aa4ea20ee85ea82233a5310b37c738838af07bb0fa7eea782e68e72cbe1cf46a0cc896 WHIRLPOOL df85a508875587651b187520b78900634402f2ca0fc2e64f43bd4a793e382e8cc6abd5b988267645bb02b3133d9aa99ab6d6ff5e200d1277093d4f7ce6e9d240
