@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*armadillo-5.100.2 (12 May 2015)
+
+  12 May 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +armadillo-5.100.2.ebuild:
+  Version bump
+
 *armadillo-5.100.1 (04 May 2015)
 
   04 May 2015; Marius Brehler <marbre@linux.sungazer.de>
